<resources>
    <string name="app_name">Goal</string>
    <string name="version_info">Goal Beta</string>
    <string name="copyright">Copyright © 2017—2017 Goal\nAll Rights Reserved.</string>
    <string name="permission_denied">权限不足</string>

    <!-- Strings related to login -->
    <string name="prompt_account">账户</string>
    <string name="set_username">昵称</string>
    <string name="go_to_sign_in">去登录</string>
    <string name="comeback_from_agreement">返回</string>
    <string name="have_agree">我已同意并阅读过</string>
    <string name="agreement">用户注册协议</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登 录</string>
    <string name="Submit_register">注册</string>
    <string name="registernewuser">注册新账号</string>
    <string name="account">邮箱或手机号</string>
    <string name="set_password">设置密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="weChat">微信</string>
    <string name="weibo">微博</string>
    <string name="error_invalid_password">密码长度过短</string>
    <string name="error_field_required">不能为空</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!--Strings related to noteList-->
    <string name="note_list_plus_icon">Orange_Plus_circle_icon</string>
    <string name="note_list_image">Image_Test</string>
    <string name="return_button">return button</string>
    <string name="note_list_text_test">先在这里瞎写一点什么东西，因为到时候可以直接通过java程序获取数据直接得到的</string>
    <string name="note_edit_hint">点击此处开始编辑</string>
    <string name="create_goal">create goal</string>
    <string name="note_share">note share</string>
    <string name="note_menu">note menu</string>
    <!--Strings related to recommendList-->
    <string name="test_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia"</string>
    <string name="test_follow_number">336人关注</string>
    <string name="recommend">推荐</string>
    <string name="recommend_edit">edit</string>
    <!-- Strings related to goal -->
    <string name="goal">目标</string>
    <string name="quick_start">快速开始</string>
    <string name="quick_start_giveup">放弃</string>
    <string name="quick_start_complete">确定</string>

    <string name="add_goal_title">新建目标</string>
    <string name="edit_goal_title">编辑目标</string>
    <string name="goal_title_hint">标题</string>
    <string name="goal_content_hint">内容</string>
    <string name="goal_begin_time_hint">计划开始时间</string>
    <string name="goal_end_time_hint">计划结束时间</string>
    <string name="goal_record">目标记录</string>
    <string name="goal_record_send">发表</string>
    <string name="goal_record_hint">说点什么吧</string>
    <string name="finished">已完成</string>
    <string name="unfinished">未完成</string>
    <string name="finished_at">完成于</string>
    <string name="create_at">创建于  %1$s</string>

    <string name="menu_edit">编辑</string>
    <string name="menu_delete">删除</string>
    <string name="menu_mark_finished_today">今日已完成</string>
    <string name="menu_mark_finished">标记目标已完成</string>
    <string name="menu_mark_unfinished">标记目标未完成</string>
    <string name="menu_record">记录</string>

    <string name="delete_goal_dialog_title">删除目标</string>
    <string name="delete_goal_dialog_info">确认删除目标</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <!-- Strings related to edit info -->
    <string name="edit_info_title">编辑个人信息</string>
    <string name="hint_username">用户名</string>
    <string name="hint_description">个人描述</string>
    <string name="hint_email">邮箱</string>
    <string name="hint_phone">手机号</string>
    <string name="edit_email">修改邮箱</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="edit_phone">修改手机号</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="new_email">新邮箱</string>
    <string name="new_phone">新手机号</string>

    <!-- Strings related to person info -->
    <string name="back_img_content_description">背景图片</string>
    <string name="default_description">你永远不知道自己可以做得多好</string>
    <string name="daily_sentence">每日一句</string>
    <string name="statistics">实时统计</string>
    <string name="setting">设置</string>
    <string name="daily_sentence_hint">致最好的你</string>
    <string name="statistics_hint">看得见过去</string>

    <!-- Strings related to settings -->
    <string name="account_safe">账号安全</string>
    <string name="account_setting">账号设置</string>
    <string name="prompt_account_setting">管理账号绑定,修改账号密码</string>
    <string name="about">关于</string>
    <string name="feedback">意见反馈</string>
    <string name="logout">退出账号</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to account safety -->
    <string name="goal_account">Goal账户</string>
    <string name="third_account">第三方账户</string>
    <string name="email">邮箱</string>
    <string name="phone">手机号</string>
    <string name="not_bind">未绑定</string>
    <string name="sina">新浪微博</string>
    <string name="bind_sina">绑定微博</string>
    <string name="QQ">QQ</string>
    <string name="bind_qq">绑定QQ</string>
    <string name="wechat">微信</string>
    <string name="bind_wechat">绑定微信</string>

    <!-- Strings related to feedback -->
    <string name="prompt_feedback">请在此输入您的建议或遇到的问题</string>
    <string name="prompt_contact">联系方式</string>
    <string name="submit">提交建议</string>
    <string name="title_activity_every_goal">EveryGoalActivity</string>
    <string name="test_comment">你真的好厉害啊！！！你真的好厉害啊！！！你真的好厉害啊！！！你真的好厉害啊的好厉害啊！！！你真的好厉害啊！！！你真的好厉害啊！！！</string>
</resources>
