<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" android:background="?attr/colorPrimary">

        <ImageButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" app:srcCompat="@drawable/ic_close_black_24dp"
                android:background="@android:color/transparent"
                android:paddingEnd="10dp" android:paddingStart="10dp"/>
        <TextView
                android:text="@string/account_safe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/title" android:layout_centerInParent="true"
                android:textSize="16sp"/>
    </RelativeLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:paddingBottom="15dp">
            <TextView
                    android:text="@string/goal_account"
                    android:layout_width="match_parent"
                    android:id="@+id/textView11" style="@style/ListTitleStyle"/>
            <RelativeLayout
                    android:id="@+id/bind_email"
                    android:layout_width="match_parent"
                    style="@style/ListItemLayoutStyle">

                <TextView
                        android:text="@string/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/email"
                        android:textColor="@android:color/background_dark" android:textSize="16sp"
                        style="@style/ListItemContentStyle"/>
                <TextView
                        android:text="@string/not_bind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/email_bind"
                        android:layout_below="@+id/email"/>
                <TextView
                        android:text="@string/bind_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ListItemOperationStyle"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        style="@style/ListDividerStyle">
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/bind_phone"
                    android:layout_width="match_parent"
                    style="@style/ListItemLayoutStyle">

                <TextView
                        android:text="@string/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/phone"
                        style="@style/ListItemContentStyle"/>
                <TextView
                        android:text="@string/not_bind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/phone_bind"
                        android:layout_below="@+id/phone"/>
                <TextView
                        android:text="@string/bind_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ListItemOperationStyle"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        style="@style/ListDividerStyle">
                </LinearLayout>
            </RelativeLayout>
            <TextView
                    android:text="@string/third_account"
                    android:layout_width="match_parent"
                    android:id="@+id/textView18" style="@style/ListTitleStyle"/>
            <RelativeLayout
                    android:id="@+id/bind_weibo"
                    android:layout_width="match_parent"
                    style="@style/ListItemLayoutStyle">

                <TextView
                        android:text="@string/weibo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ListItemContentStyle" android:id="@+id/sina"/>
                <TextView
                        android:text="@string/not_bind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/sina" android:id="@+id/sina_bind"/>
                <TextView
                        android:text="@string/bind_sina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ListItemOperationStyle"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        style="@style/ListDividerStyle">
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/bind_qq"
                    android:layout_width="match_parent"
                    style="@style/ListItemLayoutStyle">

                <TextView
                        android:text="@string/QQ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ListItemContentStyle" android:id="@+id/qq"/>
                <TextView
                        android:text="@string/not_bind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/qq" android:id="@+id/qq_bind"/>
                <TextView
                        android:text="@string/bind_qq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ListItemOperationStyle"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        style="@style/ListDividerStyle">
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/bind_wechat"
                    android:layout_width="match_parent"
                    style="@style/ListItemLayoutStyle">

                <TextView
                        android:text="@string/wechat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ListItemContentStyle" android:id="@+id/wechat"/>
                <TextView
                        android:text="@string/not_bind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/wechat" android:id="@+id/wechat_bind"/>
                <TextView
                        android:text="@string/bind_wechat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ListItemOperationStyle"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        style="@style/ListDividerStyle">
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>