<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/return_button"
            android:src="@drawable/ic_arrow_back_black_24dp" />


        <ImageButton
            android:id="@+id/menu_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_more_vert_black_24dp"
            android:contentDescription="@string/note_menu"/>

        <ImageButton
            android:id="@+id/share"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/menu_more"
            android:background="@android:color/transparent"
            android:src="@mipmap/share"
            android:contentDescription="@string/note_share"/>

        <ImageButton
            android:id="@+id/create_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/share"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_note_black_24dp"
            android:contentDescription="@string/create_goal"/>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/note_content" android:lines="5"
            android:hint="@string/note_edit_hint"
            android:gravity="top" android:layout_weight="1"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>