<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/return_button"
            android:src="@drawable/ic_arrow_back_black_24dp" />


        <ImageButton
            android:id="@+id/menu_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_more_vert_black_24dp"
            android:contentDescription="@string/note_menu"/>

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@id/menu_more"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_share_black_24dp"
            android:contentDescription="@string/note_share"/>
    </RelativeLayout>

    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/note_content"
        android:gravity="top"
        android:lines="10"
        android:hint="@string/note_edit_hint" />
    <!--</android.support.design.widget.TextInputLayout>-->
</LinearLayout>