<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:padding="15dp">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_feedback" android:maxLength="400" android:lines="5"
                android:gravity="top" android:id="@+id/suggestion"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_contact" android:maxLength="100"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/confirm" android:background="@drawable/ripple_bg"
            android:textColor="@color/colorAccent"/>
</LinearLayout>