<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" android:background="?attr/colorPrimary">

        <ImageButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" app:srcCompat="@drawable/ic_close_black_24dp"
                android:background="@android:color/transparent"
                android:paddingEnd="10dp" android:paddingLeft="10dp"/>
        <TextView
                android:text="@string/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/title" android:layout_centerInParent="true"
                android:textSize="16sp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

        <ImageView
                android:id="@+id/app_icon"
                android:layout_height="64dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_centerInParent="true"
                android:layout_width="64dp"/>
        <TextView
                android:id="@+id/version"
                android:text="@string/version_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" android:layout_below="@+id/app_icon" android:textSize="16sp"/>
    </RelativeLayout>
    <TextView
            android:text="@string/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/copyright" android:textAlignment="center"/>
</LinearLayout>