<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/goal_record_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goal_record"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/button_record"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/goal_record_send"
            android:textAlignment="center"
            android:textStyle="normal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/goal_record_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:lines="5"
            android:hint="@string/goal_record_hint"
            />
        </android.support.design.widget.TextInputLayout>
    </ScrollView>
</LinearLayout>