<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/iconmonstrplus4240"
        android:background="#00000000"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageButton"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/note_list_plus_icon"/>

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:id="@+id/demo"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:background="@drawable/shadow"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="223dp"
                android:id="@+id/demo_text"
                android:text="@string/note_list_text_test"
                android:paddingBottom="5dp"
                />

            <ImageView
                android:layout_height="43dp"
                android:layout_width="131dp"
                android:src="@android:drawable/btn_star"
                android:id="@+id/imageView"
                android:contentDescription="@string/note_list_image"/>

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp">
        <LinearLayout
            android:id="@+id/demo1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:background="@drawable/shadow"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="223dp"
                android:id="@+id/demo_text1"
                android:text="@string/note_list_text_test"
                android:paddingBottom="5dp"
                />

            <ImageView
                android:layout_height="43dp"
                android:layout_width="131dp"
                android:src="@android:drawable/btn_star"
                android:id="@+id/imageView1"
                android:contentDescription="@string/note_list_image"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>